--- a/app/views/network_events/_form.html.erb
+++ b/app/views/network_events/_form.html.erb
@@ -1,88 +1,117 @@
 
 <%= simple_form_for(@event) do |f| %>
-  <% f.error_notification %>
-    <p class="required">* Required fields</p>
+  <p class="required">* Required fields</p>
 
-    <div class="form-row">
-      <%= f.input :title %>
+  <div class="form-row row">
+    <div class="column small-12">
+      <div id="title">
+      <%= f.input :title, placeholder: 'Event title', label: false, input_html: { class: "c-title -bigger -bold"} %>
+      </div>
+    </div>
+  </div>
+
+  <div class="">
+    <div class="form-row row">
+      <div class="column small-12 medium-10 medium-offset-1">
+        <h3 class="c-title">Description</h3>
+        <%= f.cktext_area :description %>
+        <p class="required">* Required field</p>
+      </div>
     </div>
 
-    <div class="form-row">
-      <%= f.cktext_area :description %>
-      <p class="required">* Required field</p>
-    </div>
-
-    <div class="form-row">
-      <%= f.input :website, as: :string %>
-    </div>
-
-    <div class="form-row">
-      <%= f.input :excerpt, as: :string %>
+    <div class="form-row row">
+      <div class="column small-12 medium-10 medium-offset-1">
+        <h3 class="c-title">Excerpt</h3>
+        <%= f.cktext_area :excerpt, as: :string %>
+      </div>
     </div>
 
     <div class="form-row">
       <div class="row">
-        <div class="column small-12 medium-6">
+        <div class="column small-12 medium-5 medium-offset-1">
           <div id="pickadate-start" class="c-pickadate"></div>
         </div>
-        <div class="column small-12 medium-6">
+        <div class="column small-12 medium-5">
           <div id="pickadate-end" class="c-pickadate"></div>
         </div>
       </div>
     </div>
 
-    <div class="form-row">
-      <%= f.input :participants, as: :string %>
+    <div class="form-row row">
+      <div class="column small-12 medium-offset-1">
+        <h3 class="c-title">Event information</h3>
+      </div>
     </div>
 
-    <div class="form-row">
-      <%= f.input :address, as: :string %>
+    <div class="form-row row">
+      <div class="column small-12 medium-5 medium-offset-1">
+        <%= f.input :website, as: :string , placeholder: "http://www.example.org" %>
+      </div>
+
+      <div class="column small-12 medium-5">
+        <%= f.input :participants, as: :string %>
+      </div>
     </div>
 
-    <div class="form-row">
-      <%= f.input :address2, as: :string %>
+    <div class="form-row row">
+      <div class="column small-12 medium-5 medium-offset-1">
+        <%= f.input :address, as: :string %>
+      </div>
+
+      <div class="column small-12 medium-5">
+        <%= f.input :address2, as: :string %>
+      </div>
     </div>
 
-    <div class="form-row">
-      <%= f.input :country, as: :select, collection: Country.all.pluck(:country_name) %>
+    <div class="form-row"> <div class="form-row row">
+      <div class="column small-12 medium-5 medium-offset-1">
+        <%= f.input :country, as: :select, collection: Country.all.pluck(:country_name) %>
+      </div>
+
+      <div class="column small-12 medium-5">
+        <%= f.input :city %>
+      </div>
     </div>
 
-    <div class="form-row">
-      <%= f.input :city %>
+    <div class="form-row row">
+      <div class="column small-12 medium-5 medium-offset-1">
+        <%= f.input :state %>
+      </div>
+
+      <div class="column small-12 medium-5">
+        <%= f.input :postcode %>
+      </div>
     </div>
 
-    <div class="form-row">
-      <%= f.input :state %>
+    <div class="form-row row">
+      <div class="column small-12 medium-5 medium-offset-1">
+        <%= f.input :latitude %>
+      </div>
+
+      <div class="column small-12 medium-5">
+        <%= f.input :longitude %>
+      </div>
     </div>
 
-    <div class="form-row">
-      <%= f.input :latitude %>
-    </div>
+    <div class="form-row row">
+      <div class="column small-12 medium-5 medium-offset-1">
+        <%= f.input :private, as: :radio_buttons %>
+      </div>
 
-    <div class="form-row">
-      <%= f.input :longitude %>
-    </div>
-
-    <div class="form-row">
-      <%= f.input :postcode %>
-    </div>
-
-    <div class="form-row">
-      <%= f.input :private, as: :radio_buttons %>
-    </div>
-
-    <div class="form-row">
-      <%= f.input :online, as: :radio_buttons %>
+      <div class="column small-12 medium-5">
+        <%= f.input :online, as: :radio_buttons %>
+      </div>
     </div>
 
     <% if params[:error] || f.error_notification %>
       <p class="error">* Required field missing.</p>
     <% end %>
 
+  </div>
 
-    <div class="form-row">
+  <div class="form-row row">
+    <div class="column small-12 medium-5 medium-offset-1">
       <%= f.button :submit, "Submit", class: 'c-btn -primary' %>
-
 
 <% end %>
 
