--- a/app/views/network_events/new.html.erb
+++ b/app/views/network_events/new.html.erb
@@ -1,12 +1,12 @@
-<div class="l-content">
+<div class="c-project-form">
   <div class="wrapper">
-    <div class="row">
-      <div class="column small-12">
-        <h1>New Event</h1>
-
-        <%= render 'form', post: @event %>
+    <!-- <h1>New Event</h1> -->
+    <!-- <div class="row"> -->
+      <!-- <div class="column small-12"> -->
+        <%= render 'form', event: @event %>
+            </div>
           </div>
-      </div>
-    </div>
+    <!--   </div>
+    </div> -->
   </div>
 </div>
